# cpank

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  COPYRIGHT  Makefile  Makefile.am  Makefile.old  README.md  TODO.txt  bn.c  bn.h  build.zig  checksum_gen.py  compile_commands.json  compiler.c  configure.ac  debug.c  gmon.out  hello.txt  htable.c  instruction.c  instruction.h  lexer.c  lexer.h  main.c  main.go  mem.c  obj.c  openfile.c  runfile.c  sample.txt  testmain.c  token.h  upload_aar.sh  utils.c  value.c  vm.c
.github/workflows/: c-cpp.yml
cpank/: api.c  bn.c  builtins.c  compiler.c  cpank.go  debug.c  errmsg.c  htable.c  instruction.c  lexer.c  main.c  mem.c  obj.c  openfile.c  runfile.c  testmain.c  utils.c  value.c  vm.c
cpank/ext/: ext.go
cpank/ext/baurinum/: baurinum.c  baurinum.go  baurinum.h  utility.c
cpank/ext/iup/: CMakeLists.txt  Makefile  a.c  build.zig
cpank/ext/libuing/: build.zig
cpank/ext/libuing/windows/: colordialog.cpp  winutil.cpp
cpank/ext/tommath/: .makefile.kate-swp  .makefile_include.mk.kate-swp  tommath.go
cpank/ext/xxhash/: .gitignore  xxhash.c  xxhash.go
cpank/include/: api.h  bn.h  builtins.h  common.h  compiler.h  debug.h  errmsgs.h  htable.h  instruction.h  lexer.h  mem.h  obj.h  openfile.h  pank.h  runfile.h  stdlib.h  token.h  utils.h  value.h  vm.h
cpank/include/helper/: arch.h  comp.h  os.h
cpank/stdlib/: array.c  big.c  bnmath.c  bnos.c  common.c  file.c  map.c  math.c  os.c  stdlib.c  stdlib.go  string.c
cpankproj/: .gitignore  cpankproj.rc  cpankproj.rc.unix  cpankproj.sln  cpankproj.vcxproj  cpankproj.vcxproj.filters  resource.h
gopkg/: .gitignore  Makefile  gopkg.go  main.go
gopkg/androidapi/: androidapi.c  androidapi.go  androidapi.h
gui/: gui.c  gui.cpp  icon.h
include/: bn.h  common.h  compiler.h  debug.h  htable.h  instruction.h  lexer.h  mem.h  obj.h  openfile.h  runfile.h  utils.h  value.h  vm.h
notes/: 1.txt  import_system.txt  index.html  stdlib.md
sample/: 0.pank  0.txt  1.pank  1.txt  2.pank  2.txt  3.pank  3.txt  4.pank  4.txt  README.md  array_test.pank  array_test.txt  bn_num.pank  bn_num.txt  checkeq.pank  closure.pank  closure.txt  fib.txt  fib_big.pank  fib_bn.txt  fib_en.cpank  fib_en.txt  fib_loop.pank  fib_w.pank  ftest.pank  ftest.txt  import.pank  maptest.pank  maptest.txt  math_sl_bn.pank  math_sl_bn.txt  sample.pank  sample.txt  serr_bn.pank  sltest.pank  sltest.txt  stdarr.pank  stdbig.pank  stdcommon.pank  (+15 more)
stdlib/: math.c  stdlib.c
tests/: __init__.py  basic_math.py  test_basic_math.py  test_std_math.py  utils.py
web/: .gitignore  index.html  pankti.web.c  script.js
