set(IUP_SRC_DIR "src")

set(IUP_SRC_WIN "${IUP_SRC_DIR}/win/iupwindows_help.c"
				"${IUP_SRC_DIR}/win/iupwindows_info.c" 
				"${IUP_SRC_DIR}/win/iupwindows_main.c" 
				"${IUP_SRC_DIR}/win/iupwin_brush.c" 
				"${IUP_SRC_DIR}/win/iupwin_button.c" 
				"${IUP_SRC_DIR}/win/iupwin_calendar.c" 
				"${IUP_SRC_DIR}/win/iupwin_canvas.c" 
				"${IUP_SRC_DIR}/win/iupwin_clipboard.c" 
				"${IUP_SRC_DIR}/win/iupwin_common.c" 
				"${IUP_SRC_DIR}/win/iupwin_datepick.c" 
				"${IUP_SRC_DIR}/win/iupwin_dialog.c" 
				"${IUP_SRC_DIR}/win/iupwin_dragdrop.c" 
				"${IUP_SRC_DIR}/win/iupwin_draw.c" 
				"${IUP_SRC_DIR}/win/iupwin_draw_gdi.c" 
				"${IUP_SRC_DIR}/win/iupwin_draw_wdl.c" 
				"${IUP_SRC_DIR}/win/iupwin_filedlg.c" 
				"${IUP_SRC_DIR}/win/iupwin_focus.c" 
				"${IUP_SRC_DIR}/win/iupwin_font.c" 
				"${IUP_SRC_DIR}/win/iupwin_fontdlg.c" 
				"${IUP_SRC_DIR}/win/iupwin_frame.c" 
				"${IUP_SRC_DIR}/win/iupwin_globalattrib.c" 
				"${IUP_SRC_DIR}/win/iupwin_handle.c" 
				"${IUP_SRC_DIR}/win/iupwin_image.c" 
				"${IUP_SRC_DIR}/win/iupwin_image_wdl.c" 
				"${IUP_SRC_DIR}/win/iupwin_info.c" 
				"${IUP_SRC_DIR}/win/iupwin_key.c" 
				"${IUP_SRC_DIR}/win/iupwin_label.c" 
				"${IUP_SRC_DIR}/win/iupwin_list.c" 
				"${IUP_SRC_DIR}/win/iupwin_loop.c" 
				"${IUP_SRC_DIR}/win/iupwin_menu.c" 
				"${IUP_SRC_DIR}/win/iupwin_messagedlg.c" 
				"${IUP_SRC_DIR}/win/iupwin_open.c" 
				"${IUP_SRC_DIR}/win/iupwin_progressbar.c" 
				"${IUP_SRC_DIR}/win/iupwin_str.c" 
				"${IUP_SRC_DIR}/win/iupwin_tabs.c" 
				"${IUP_SRC_DIR}/win/iupwin_text.c" 
				"${IUP_SRC_DIR}/win/iupwin_timer.c" 
				"${IUP_SRC_DIR}/win/iupwin_tips.c" 
				"${IUP_SRC_DIR}/win/iupwin_toggle.c" 
				"${IUP_SRC_DIR}/win/iupwin_touch.c" 
				"${IUP_SRC_DIR}/win/iupwin_tree.c" 
				"${IUP_SRC_DIR}/win/iupwin_val.c" 
				"${IUP_SRC_DIR}/win/wdl/backend-d2d.c" 
				"${IUP_SRC_DIR}/win/wdl/backend-dwrite.c" 
				"${IUP_SRC_DIR}/win/wdl/backend-gdix.c" 
				"${IUP_SRC_DIR}/win/wdl/backend-wic.c" 
				"${IUP_SRC_DIR}/win/wdl/bitblt.c" 
				"${IUP_SRC_DIR}/win/wdl/brush.c" 
				"${IUP_SRC_DIR}/win/wdl/cachedimage.c" 
				"${IUP_SRC_DIR}/win/wdl/canvas.c" 
				"${IUP_SRC_DIR}/win/wdl/draw.c" 
				"${IUP_SRC_DIR}/win/wdl/fill.c" 
				"${IUP_SRC_DIR}/win/wdl/font.c" 
				"${IUP_SRC_DIR}/win/wdl/image.c" 
				"${IUP_SRC_DIR}/win/wdl/init.c" 
				"${IUP_SRC_DIR}/win/wdl/memstream.c" 
				"${IUP_SRC_DIR}/win/wdl/misc.c" 
				"${IUP_SRC_DIR}/win/wdl/path.c" 
				"${IUP_SRC_DIR}/win/wdl/string.c" 
				"${IUP_SRC_DIR}/win/wdl/strokestyle.c")

set(IUP_SRC_GTK "${IUP_SRC_DIR}/gtk/iupgtk_button.c"
				"${IUP_SRC_DIR}/gtk/iupgtk_calendar.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_canvas.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_clipboard.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_common.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_dialog.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_dragdrop.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_draw_cairo.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_filedlg.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_focus.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_font.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_fontdlg.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_frame.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_globalattrib.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_help.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_image.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_info.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_image.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_info.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_key.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_label.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_list.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_loop.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_menu.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_messagedlg.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_open.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_progressbar.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_str.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_tabs.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_text.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_timer.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_tips.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_toggle.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_val.c" 
				"${IUP_SRC_DIR}/gtk/iupgtk_tree.c" 
				"${IUP_SRC_DIR}/mot/iupunix_info.c" 
				"srcgl/iup_glcanvas_x.c" 
)

set(IUP_CORE "${IUP_SRC_DIR}/iup_animatedlabel.c"
				"${IUP_SRC_DIR}/iup_array.c" 
				"${IUP_SRC_DIR}/iup_assert.c" 
				"${IUP_SRC_DIR}/iup_attrib.c" 
				"${IUP_SRC_DIR}/iup_backgroundbox.c" 
				"${IUP_SRC_DIR}/iup_box.c" 
				"${IUP_SRC_DIR}/iup_button.c" 
				"${IUP_SRC_DIR}/iup.c" 
				"${IUP_SRC_DIR}/iup_callback.c" 
				"${IUP_SRC_DIR}/iup_cbox.c" 
				"${IUP_SRC_DIR}/iup_childtree.c" 
				"${IUP_SRC_DIR}/iup_classattrib.c" 
				"${IUP_SRC_DIR}/iup_classbase.c" 
				"${IUP_SRC_DIR}/iup_class.c" 
				"${IUP_SRC_DIR}/iup_classinfo.c" 
				"${IUP_SRC_DIR}/iup_config.c" 
				"${IUP_SRC_DIR}/iup_detachbox.c" 
				"${IUP_SRC_DIR}/iup_dialog.c" 
				"${IUP_SRC_DIR}/iup_dlglist.c" 
				"${IUP_SRC_DIR}/iup_draw.c" 
				"${IUP_SRC_DIR}/iup_dropbutton.c" 
				"${IUP_SRC_DIR}/iup_elempropdlg.c" 
				"${IUP_SRC_DIR}/iup_expander.c" 
				"${IUP_SRC_DIR}/iup_export.c" 
				"${IUP_SRC_DIR}/iup_filedlg.c" 
				"${IUP_SRC_DIR}/iup_fill.c" 
				"${IUP_SRC_DIR}/iup_flatbutton.c" 
				"${IUP_SRC_DIR}/iup_flatframe.c" 
				"${IUP_SRC_DIR}/iup_flatlabel.c" 
				"${IUP_SRC_DIR}/iup_flatlist.c" 
				"${IUP_SRC_DIR}/iup_flatscrollbar.c" 
				"${IUP_SRC_DIR}/iup_flatscrollbox.c" 
				"${IUP_SRC_DIR}/iup_flatseparator.c" 
				"${IUP_SRC_DIR}/iup_flattabs.c" 
				"${IUP_SRC_DIR}/iup_flattoggle.c" 
				"${IUP_SRC_DIR}/iup_flattree.c" 
				"${IUP_SRC_DIR}/iup_flatval.c" 
				"${IUP_SRC_DIR}/iup_focus.c" 
				"${IUP_SRC_DIR}/iup_font.c" 
				"${IUP_SRC_DIR}/iup_fontdlg.c" 
				"${IUP_SRC_DIR}/iup_frame.c" 
				"${IUP_SRC_DIR}/iup_func.c" 
				"${IUP_SRC_DIR}/iup_gauge.c" 
				"${IUP_SRC_DIR}/iup_getparam.c" 
				"${IUP_SRC_DIR}/iup_globalattrib.c" 
				"${IUP_SRC_DIR}/iup_globalsdlg.c" 
				"${IUP_SRC_DIR}/iup_gridbox.c" 
				"${IUP_SRC_DIR}/iup_hbox.c" 
				"${IUP_SRC_DIR}/iup_image.c" 
				"${IUP_SRC_DIR}/iup_key.c" 
				"${IUP_SRC_DIR}/iup_label.c" 
				"${IUP_SRC_DIR}/iup_layout.c" 
				"${IUP_SRC_DIR}/iup_layoutdlg.c" 
				"${IUP_SRC_DIR}/iup_ledlex.c" 
				"${IUP_SRC_DIR}/iup_ledparse.c" 
				"${IUP_SRC_DIR}/iup_linefile.c" 
				"${IUP_SRC_DIR}/iup_link.c" 
				"${IUP_SRC_DIR}/iup_list.c" 
				"${IUP_SRC_DIR}/iup_loop.c" 
				"${IUP_SRC_DIR}/iup_mask.c" 
				"${IUP_SRC_DIR}/iup_maskmatch.c" 
				"${IUP_SRC_DIR}/iup_maskparse.c" 
				"${IUP_SRC_DIR}/iup_menu.c" 
				"${IUP_SRC_DIR}/iup_messagedlg.c" 
				"${IUP_SRC_DIR}/iup_multibox.c" 
				"${IUP_SRC_DIR}/iup_names.c" 
				"${IUP_SRC_DIR}/iup_normalizer.c" 
				"${IUP_SRC_DIR}/iup_object.c" 
				"${IUP_SRC_DIR}/iup_open.c" 
				"${IUP_SRC_DIR}/iup_predialogs.c" 
				"${IUP_SRC_DIR}/iup_progressbar.c" 
				"${IUP_SRC_DIR}/iup_progressdlg.c" 
				"${IUP_SRC_DIR}/iup_radio.c" 
				"${IUP_SRC_DIR}/iup_recplay.c" 
				"${IUP_SRC_DIR}/iup_register.c" 
				"${IUP_SRC_DIR}/iup_sbox.c" 
				"${IUP_SRC_DIR}/iup_scanf.c" 
				"${IUP_SRC_DIR}/iup_scrollbox.c" 
				"${IUP_SRC_DIR}/iup_show.c" 
				"${IUP_SRC_DIR}/iup_space.c" 
				"${IUP_SRC_DIR}/iup_split.c" 
				"${IUP_SRC_DIR}/iup_str.c" 
				"${IUP_SRC_DIR}/iup_strmessage.c" 
				"${IUP_SRC_DIR}/iup_table.c" 
				"${IUP_SRC_DIR}/iup_tabs.c" 
				"${IUP_SRC_DIR}/iup_text.c" 
				"${IUP_SRC_DIR}/iup_thread.c" 
				"${IUP_SRC_DIR}/iup_timer.c" 
				"${IUP_SRC_DIR}/iup_toggle.c" 
				"${IUP_SRC_DIR}/iup_user.c" 
				"${IUP_SRC_DIR}/iup_val.c" 
				"${IUP_SRC_DIR}/iup_vbox.c" 
				"${IUP_SRC_DIR}/iup_zbox.c" 
				"${IUP_SRC_DIR}/iup_canvas.c" 
				"${IUP_SRC_DIR}/iup_colorbar.c" 
				"${IUP_SRC_DIR}/iup_colorbrowser.c" 
				"${IUP_SRC_DIR}/iup_colordlg.c" 
				"${IUP_SRC_DIR}/iup_colorhsi.c" 
				"${IUP_SRC_DIR}/iup_datepick.c" 
				"${IUP_SRC_DIR}/iup_dial.c" 
				"${IUP_SRC_DIR}/iup_spin.c" 
				"${IUP_SRC_DIR}/iup_tree.c"  
)

add_library(cpankiup STATIC ${IUP_CORE})
target_include_directories(cpankiup PRIVATE "${CMAKE_CURRENT_LIST_DIR}/include")
target_include_directories(cpankiup PRIVATE "${CMAKE_CURRENT_LIST_DIR}/${IUP_SRC_DIR}")

if (WIN3)
	target_sources(cpankiup PRIVATE ${IUP_SRC_WIN})
endif()

if (LINUX)
	target_sources(cpankiup PRIVATE ${IUP_SRC_GTK})
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
	pkg_check_modules(X11 REQUIRED x11)
	target_include_directories(cpankiup PUBLIC "${GTK3_INCLUDE_DIRS}")
	target_include_directories(cpankiup PUBLIC "${X11_INCLUDE_DIRS}")
	target_link_libraries(cpankiup ${GTK3_LIBRARIES})
	target_link_libraries(cpankiup ${X11_LIBRARIES})
endif()
